src/test/compile-fail/attr-bad-meta.rs
// error-pattern:expecting ]

// asterisk is bogus
#[attr*]
mod m { }